# Console-Player

./: CMakeLists.txt  README.md  bgm.cpp  cplayer.cpp  cplayer.h  main.cpp
backup/: CMakeLists.txt  README.md
backup/src/: cplayer.h
bgm/: CMakeLists.txt  bgm.cpp
demo/: attribution.txt
src/: CMakeLists.txt  cplayer.cpp  cplayer.h
